<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/form_layout_margin"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_registration_til_mar_top">
            <EditText
                android:id="@+id/rp_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="@dimen/form_et_drawable_padding"
                android:hint="@string/EnterPassword" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_registration_til_mar_top">
            <EditText
                android:id="@+id/rp_cnfpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="@dimen/form_et_drawable_padding"
                android:hint="@string/ConfirmPassword" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/button_margin_top">
            <Button
                android:id="@+id/rp_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:background="@color/colorPrimary"
                android:textColor="@color/buttonTextColor"
                
                android:layout_marginTop="@dimen/button_margin_top"
                />

            <!--<Button
                android:id="@+id/rp_cancle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="cancel"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:layout_margin="5dp"/>-->

        </LinearLayout>

    </LinearLayout>


</LinearLayout>